--- a/project_qusasa/qusasa/templates/qusasa/YouTubeFeat.html
+++ b/project_qusasa/qusasa/templates/qusasa/YouTubeFeat.html
@@ -135,7 +135,7 @@
                 <header class="card__thumb">
                     <img src="{% static 'qusasa/images/video_retrival.webp' %}"/>
                     <div class="feature-name">
-                        Video Retrieval
+                        Similar videos
                     </div>
                 </header>
                 
