--- a/project_qusasa/qusasa/templates/features_pages/video_retriving/video_retriving_output.html
+++ b/project_qusasa/qusasa/templates/features_pages/video_retriving/video_retriving_output.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qusasa | Youtube Video Retrieval </title>
+    <title>Qusasa | Youtube Similar videos </title>
     <!-- Linking CSS -->
     <link rel="stylesheet" href="{% static 'qusasa/css/signup.css' %}" />
     <link rel="stylesheet" href="{% static 'qusasa/css/base.css' %}" />
