--- a/project_qusasa/qusasa/templates/qusasa/base.html
+++ b/project_qusasa/qusasa/templates/qusasa/base.html
@@ -226,7 +226,7 @@
                             <img src="{% static 'qusasa/images/report.png' %}"/>
                             <div class="feature-name">
     
-                                    Channel Analysis {{ history.id }}
+                                    Channel Analysis ({{ history.analysis_data.title }})
                             </div>
                         </header>
                         
