--- a/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_detail.html
+++ b/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_detail.html
@@ -17,15 +17,7 @@
     
   </head>
   <body>
-    <!-- <img class="polygon" src="{% static 'qusasa/images/Frame 2.png'%}" alt="Description of Image" class="full-size-absolute"> -->
 
-    <!--   <div class="navigation">
-        <img class="static-img" src="{% static 'qusasa/images/qusasa.png' %}" alt="">
-
-        <div class="navs">
-            <a href="{% url 'logout' %}">Log out</a>
-        </div>
-    </div>   -->
     <a class="log-out" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i> Log out</a>
 
     {% include 'side_nav.html' %}
@@ -59,11 +51,14 @@
                         <br>
         
                         <div class="output">
-                            <a href="{% url 'channel_analysis_redo' history.id %}"><button style="width: 20rem"><i class="fa-solid fa-circle-play" style="color: white; margin-right: 0.5rem;"></i> Redo this template</button></a>
+                            <a href="{% url 'set_session_channel_analysis' history.id %}">
+                              <button style="width: 20rem"><i class="fa-solid fa-circle-play" style="color: white; margin-right: 0.5rem;"></i> Load and View Analysis</button>
+                          </a>
                             <a href="{% url 'delete_history' 'channel' history.id %}" onclick="return confirm('Are you sure you want to delete this template?');">
                               <button style="width: 20rem; margin-top: 1rem; background: linear-gradient(rgb(124, 36, 36), rgb(178, 96, 96))">
                                 <i class="fa-solid fa-trash" style="color: white; margin-right: 0.5rem;"></i> Delete this template
                               </button>
+                              
                           </a>
                           </div>
                     </div>                </div>
