--- a/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
+++ b/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
@@ -489,6 +489,11 @@
     align-items: center;
 }
 
+#ask_request {
+    display: none;
+    visibility: hidden;
+}
+
 .request {
     display: inline-block;
     font-size: 0.9rem;
@@ -522,6 +527,7 @@
     margin-right: 0.5rem;
 }
 
+
 #download_link, #download_link_dataset {
     padding: 0.8rem 2.5rem;
         font-family: 'Raleway';
@@ -536,6 +542,12 @@
         transition: 0.3s ease-in-out;
         font-weight: 700;
         font-size: 1rem;
+        width: 12rem;
+        text-align: center;
+}
+
+#response1 {
+    flex-direction: column;
 }
 
 #download_link:hover, #download_link_dataset:hover {
@@ -549,7 +561,7 @@
   </head>
   <body>
     
-    <a class="log-out" href="#popup1"><i class="fa-solid fa-right-from-bracket"></i> Exit Analysis</a>
+    <a class="log-out" href="#popup_close"><i class="fa-solid fa-right-from-bracket"></i> Exit Analysis</a>
     <div id="popup" class="popup-dataset">
         <div class="popup-content">
             <span class="close" onclick="closePopup()">&times;</span>
@@ -993,14 +1005,14 @@
         <div class="mini-container" id="section6">
             <div class="ask-Ai">
                 <div id="step1" class="ask-ai-intro">
-                    <h2>Ask datasets with AI</h2>
+                    <h2>Chat With Datasets Using AI</h2>
                     <button onclick="nextStep()"><i class="fa-solid fa-play"></i></button>
                 </div>
                 
                 <div id="step2" style="display: none;" class="explanation-container">
                     <div class="explanation">
                         <img src="{% static 'qusasa/images/Qusasa end.png' %}"  alt="Floating Image">
-                        <span>Ask Datasets with AI</span> is like having a super-smart buddy who helps you unravel the mysteries hidden in your data! Want to know how many videos popped up in February? Or maybe you're just curious about what a channel or playlist is all about? No worries! Our chatbot is here to make diving into your data a breeze. So go ahead, ask away, and let's uncover some awesome insights together!
+                        <span>Chat With Datasets</span> is like having a super-smart buddy who helps you unravel the mysteries hidden in your data! Want to know how many videos popped up in February? Or maybe you're just curious about what a channel or playlist is all about? No worries! Our chatbot is here to make diving into your data a breeze. So go ahead, ask away, and let's uncover some awesome insights together!
                     </div>
                     <div class="datasets">
                         <h2>Learn more about your Datasets!</h2>
@@ -1033,7 +1045,7 @@
                     
                     <div class="ask-Ai">
                         <div class="col">
-                            <h2 data-aos="fade-up">Ask AI about your datasets</h2>
+                            <h2 data-aos="fade-up">Chat With Datasets Using AI</h2>
                             <div class="datasets smaller-datasets" style="width: 100%; display:flex; flex-direction:row; justify-content:center; align-items:center;">
                                 <div class="datasets-info" style="display:flex;width: 100%; flex-direction:row; justify-content:space-between; align-items:center;" >
                                     <div class="dataset" onclick="showDatasetInfo1('ChannelVideos')">
@@ -1069,15 +1081,16 @@
                             <h3 data-aos="fade-up">Answer</h3>
                             
                             <div class="answer" data-aos="fade-up">
+                                <div id='ask_request' class="request">
+                                    
+                                </div>
                                 <div id="loading-spinner" class="loading-spinner floating">
                                     <!-- Your spinner or loading message here -->
                                     <img src="{% static 'qusasa/images/Qusasa end.png' %}"  alt="Floating Image">
                                     <h2>Waiting for the Assistant to process...</h2>
                                 </div>
                                 <div id="response">
-                                    <div id='ask_request' class="request">
                                     
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1179,7 +1192,7 @@
                         <div class="col" style="width: 100%">
                             <h3 data-aos="fade-up">Output</h3>
                             
-                            <div class="answer answer_output" data-aos="fade-up" style="height: 40rem; max-height:40rem;">
+                            <div class="answer answer_output" data-aos="fade-up" style="height: 48rem; max-height:48rem;">
                                 <div id="loading-spinner1" class="loading-spinner floating">
                                     <!-- Your spinner or loading message here -->
                                     <img src="{% static 'qusasa/images/Qusasa end.png' %}"  alt="Floating Image">
@@ -1190,20 +1203,28 @@
                                     
                                     </div>
                                     
-                                    <img id="base64Image" src="" alt="Image from Base64" style="max-width: 100%; margin-top:2rem; margin-bottom:2rem;" />
+                                    <img id="base64Image" src="" alt="Image from Base64" style="max-width: 100%; margin:0;" />
                                     <a id="download_link" ><i class="fa-solid fa-download"></i> Download Image</a>
 
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
+                    
+
                 </div>
-                
             </div>
-            
-
-        </div>
-        </div>
         </div>
 
+        <div class="mini-container " id="section8">
+            <div class="schedule-container">
+                <h1>Do you want to shedule your results?</h1>
+                <p>You can schedule the analysis to be recived at a certain times hourly, daily, or even monthly!</p>
+                <a href="{% url 'schedule_channel_analysis_form' %}"><button>Schedule my Analysis Now</button></a>
+    
+            </div>
+           
         </div>
 
        
@@ -1211,26 +1232,46 @@
 
         
 
-        <div id="popup1" class="overlay">
+        <div id="popup_close" class="overlay">
             <div class="popup">
-                <h2>Are you sure you want to quit the analysis?</h2>
+                <h2>Do you want to save your results?</h2>
                 <div class="text">
-                    if you did you will not be able to access its content anymore...
+                    If you choose to save, you will be able to access the content later.
                     <div class="popup-buttons">
-                        <a href="{% url 'base' %}"><button class="yes">Yes I'm sure</button></a>
-                    <a href="#"><button>Go back</button></a>
+                        <button class="yes" onclick="saveResults()">Yes, save them</button>
+                        <a href="{% url 'base' %}"><button>Don't save, just exit</button></a>
                     </div>   
                 </div>
-                
             </div>
         </div>
+        
 
 
 
 
     </div>
 
-   
+
+    <script>
+        function saveResults() {
+            fetch("{% url 'save_results_channel_analysis' %}", {
+                method: 'POST', // or 'PUT'
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': '{{ csrf_token }}'
+                },
+                body: JSON.stringify({save: true}) // You can include additional data if needed
+            }).then(response => response.json())
+              .then(data => {
+                if (data.success) {
+                    window.location.href = "{% url 'base' %}"; // Redirect or inform the user
+                } else {
+                    alert("Failed to save results.");
+                }
+            });
+        }
+        </script>
+        
 
 <script type="text/javascript">
     const csrftoken = '{{ csrf_token }}';
@@ -2490,6 +2531,10 @@ var emotionsWorst = Object.keys(emotionDataslicedWorst);
             document.getElementById('loading-spinner').style.visibility = 'hidden';
             document.getElementById('loading-spinner').style.display = 'none';
             document.getElementById('response').style.visibility = 'visible';
+            document.getElementById('response').style.display = 'block';
+            document.getElementById('ask_request').style.visibility = 'visible';
+            document.getElementById('ask_request').style.display = 'block';
+
 
         };
     
@@ -2509,6 +2554,9 @@ var emotionsWorst = Object.keys(emotionDataslicedWorst);
             document.getElementById('loading-spinner').style.display = 'block';
 
             document.getElementById('response').style.visibility = 'hidden';
+            document.getElementById('response').style.display = 'none';
+            document.getElementById('ask_request').style.visibility = 'hidden';
+            document.getElementById('ask_request').style.display = 'none';
 
             // Here you package both the message and the CSV data into one WebSocket message
             ws.send(JSON.stringify({'message': message, 'csvData': [csvData, csvData2, csvData3]}));
@@ -2550,7 +2598,7 @@ var emotionsWorst = Object.keys(emotionDataslicedWorst);
             document.getElementById('loading-spinner1').style.visibility = 'hidden';
             document.getElementById('loading-spinner1').style.display = 'none';
             document.getElementById('response1').style.visibility = 'visible';
-            document.getElementById('response1').style.display = 'block';
+            document.getElementById('response1').style.display = 'flex';
 
 
         };
