--- a/project_qusasa/qusasa/templates/admin/display_inquiry.html
+++ b/project_qusasa/qusasa/templates/admin/display_inquiry.html
@@ -81,7 +81,6 @@
   width: 100%;
   justify-content: stretch;
 
-
 }
 
 
@@ -119,9 +118,11 @@
 .inquery-image-container img {
     display: block;
     width: 100%;
+    max-width: 100px;
     height: auto;
     text-align: center; /* Center-align the image and input */
     transition: transform 0.3s ease;
+    margin-right: 0%;
 }
 
 .inquery-image-container:hover {
