--- a/project_qusasa/qusasa/templates/qusasa/update_inquiry.html
+++ b/project_qusasa/qusasa/templates/qusasa/update_inquiry.html
@@ -224,7 +224,7 @@
     width: fit-content;
     margin-left: 1.5%;
     text-align: center; /* Center-align the image and input */
-    padding: 1.5%;
+    padding: 1%;
     transition: transform 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -232,7 +232,7 @@
 .inquery-image-container img {
     display: block;
     width: 100%;
-    height: auto;
+    height: fit-content;
     text-align: center; /* Center-align the image and input */
     transition: transform 0.3s ease;
 }
