--- a/project_qusasa/qusasa/templates/qusasa/user_display_inquiry.html
+++ b/project_qusasa/qusasa/templates/qusasa/user_display_inquiry.html
@@ -223,13 +223,16 @@
     box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
     border-radius: 8px;
     margin-bottom: 20px;
+    max-width: 100px;
+
 }
 
 .inquery-image-container img {
     display: block;
-    width: 100%;
-    height: auto;
-    text-align: center; /* Center-align the image and input */
+    width: 100%; /* Adjust this as needed */
+    height: auto; /* Maintain aspect ratio */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Shadow effect for depth */
     transition: transform 0.3s ease;
 }
 
@@ -250,7 +253,7 @@
             <a href="{% url 'logout' %}">Log out</a>
         </div>
     </div> -->
-    <a class="log-out" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i>  Log out</a>
+    <a class="log-out" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i> Log out</a>
 
     <div class="hamburger">
         <div class="bar"></div>
@@ -333,10 +336,8 @@
                                 {% if history.picture %}
                                 <div class="inquery-image-container">
                                   <a href="{{ history.picture.url }}" target="_blank" style="    width: fit-content; ">
-                                    <img src="{{ history.picture.url }}" alt="Inquiry Picture" style="    width: 100%; 
-                                    max-width: 300px; 
-                                    height: auto; 
-                                    border-radius: 4px;" />
+                                    <img src="{{ history.picture.url }}" alt="Inquiry Picture" style="width: 100px; height: 100px; border-radius: 10px;" />
+
                                   </a>
                                 </div>
                                 {% else %}
