--- a/project_qusasa/qusasa/static/qusasa/css/output.css
+++ b/project_qusasa/qusasa/static/qusasa/css/output.css
@@ -332,7 +332,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    padding: 2rem;
+    padding: 0 2rem;
     justify-content: space-around;
 }
 
