--- a/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
+++ b/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
@@ -594,7 +594,7 @@
                 <i class="fa-solid fa-table"></i>
                 <div class="download-text">
                     <div class="text">
-                        <h3>The Channel datasets</h3>
+                    <h3>The Channel datasets</h3>
                     <p>A dataset for the channel info, a dataset for channel videos, and a dataset for channel palylists</p>
                     </div>
                     
@@ -898,7 +898,7 @@
                     
                     {%if top_5_comments%}
                     <div class="emotions_radchart" style="margin-bottom: 5rem; margin-top: 5rem;">
-                        <h1 data-aos="fade-up">Commetns emotions distribution</h1>
+                        <h1 data-aos="fade-up">Comments emotions distribution</h1>
                     <p data-aos="fade-up">Get a deeper understanding of why the viewers likes this content through comments sentiment analysis</p>
                     <div id="emotions_radchart" data-aos="fade-up"></div>
                     </div>
