--- a/project_qusasa/qusasa/templates/qusasa/user_display_inquiry.html
+++ b/project_qusasa/qusasa/templates/qusasa/user_display_inquiry.html
@@ -218,7 +218,7 @@
     margin-right: 3rem;
   }
   .inquery-image-container {
-    padding: 10px; 
+    padding: 1.5%;
     border: 1px solid #ccc; 
     box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
     border-radius: 8px;
