--- a/project_qusasa/qusasa/templates/qusasa/user_display_inquiry.html
+++ b/project_qusasa/qusasa/templates/qusasa/user_display_inquiry.html
@@ -218,11 +218,14 @@
     margin-right: 3rem;
   }
   .inquery-image-container {
-    padding: 10px; 
-    border: 1px solid #ccc; 
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
     border-radius: 8px;
-    margin-bottom: 20px;
+    overflow: hidden;
+    width: fit-content;
+    margin-left: 1.5%;
+    text-align: center; /* Center-align the image and input */
+    padding: 1.5%;
+    transition: transform 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .inquery-image-container img {
@@ -237,6 +240,34 @@
     transform: scale(1.05);
     cursor: pointer;
 }
+.file-upload {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.upload-button {
+    padding: 8px 16px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.upload-button:hover {
+    background-color: #0056b3;
+}
+
+#file-chosen {
+    min-width: 200px;
+    padding: 8px;
+}
+
+
+
+
     </style>
 </head>
 <body> 
